--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "bankai start example",
     "test": "standard"
   },
-  "dependencies": {},
+  "dependencies": {
+    "on-idle": "^3.1.4"
+  },
   "devDependencies": {
     "bankai": "^9.0.1",
     "choo": "^6.5.1",
